# toto

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  pyproject.toml
cmake/: conan_provider.cmake
include/: toto.hpp
include/toto/: fun.hpp
src/lib/: fun.cpp
src/python/: toto.cpp
src/toto/: __init__.py
test_package/: CMakeLists.txt  conanfile.py  test_package.cpp
